--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>前航-前端导航网站</title>
 	<link rel="stylesheet" type="text/css" href="./css/index.css"/>
-	<style type="text/css">
-	    .icon {
-	       width: 1em; height: 1em;
-	       vertical-align: -0.15em;
-	       fill: currentColor;
-	       overflow: hidden;
-	    }
-	</style>
+	<link rel="stylesheet" type="text/css" href="./css/media.css"/>
+	
 </head>
 <body>
 	 <header class="globalHeader">
@@ -21,36 +15,17 @@
 		 	<input type="text" name="wd" placeholder="百度一下~">
 			<button type="submit" class="search">搜索</button>
 		 </form>
+		
 	 </header>
 	 
 	 <main class="globalMain">
+		 
 		 <ul class="navList">
-		 	<li>
-					<div class="nav">
-						<div class="logo">A</div>
-						<div class="link">acfun.cn</div>
-					</div>
-			</li>
-			<li>
-				<div class="nav">
-					<div class="logo">A</div>
-					<div class="link">acfun.cn</div>
-				</div>
-			</li>
 			<li class="last">
-				<div class="addNav">
-					<div class="logo">
-						<svg class="icon">
-						    <use xlink:href="#icon-add"></use>
-						</svg>
-					</div>
-					<div class="text">新增网站</div>
-				</div>
 			</li>
 		 </ul>
 	 </main>
 	 
-	 <script src="//at.alicdn.com/t/font_2794708_5we283d5phu.js"></script>
 	 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
      <script src="./js/main.js"></script>
 </body>
